aggiunto css per alcuni blocchi nel main

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           allowfullscreen
         ></iframe>
 
-        <section>
+        <section id="sectionNovità">
           <h2 id="novità">Novità</h2>
           <p>
             Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
